wwwroot/css/site.css
@charset "UTF-8";
/*!
 * Bootswatch v5.3.8 (https://bootswatch.com)
 * Theme: litera
 * Copyright 2012-2025 Thomas Park
 * Licensed under MIT
 * Based on Bootstrap
*/
/*!
 * Bootstrap  v5.3.8 (https://getbootstrap.com/)
 * Copyright 2011-2025 The Bootstrap Authors
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
 */
:root,
[data-bs-theme=light] {
  --bs-blue: #4582ec;
  --bs-indigo: #6610f2;
  --bs-purple: #6f42c1;
  --bs-pink: #e83e8c;
  --bs-red: #d9534f;
  --bs-orange: #fd7e14;
  --bs-yellow: #f0ad4e;
  --bs-green: #02b875;
  --bs-teal: #20c997;
  --bs-cyan: #17a2b8;
  --bs-black: #000;
  --bs-white: #fff;
  --bs-gray: #868e96;
  --bs-gray-dark: #343a40;
  --bs-gray-100: #f8f9fa;
  --bs-gray-200: #e9ecef;
  --bs-gray-300: #ddd;
  --bs-gray-400: #ced4da;
  --bs-gray-500: #adb5bd;
  --bs-gray-600: #868e96;
  --bs-gray-700: #495057;
  --bs-gray-800: #343a40;
  --bs-gray-900: #212529;
  --bs-primary: #4582ec;
  --bs-secondary: #adb5bd;
  --bs-success: #02b875;
  --bs-info: #17a2b8;
  --bs-warning: #f0ad4e;
  --bs-danger: #d9534f;
  --bs-light: #f8f9fa;
  --bs-dark: #343a40;
  --bs-primary-rgb: 69, 130, 236;
  --bs-secondary-rgb: 173, 181, 189;
  --bs-success-rgb: 2, 184, 117;
  --bs-info-rgb: 23, 162, 184;
  --bs-warning-rgb: 240, 173, 78;
  --bs-danger-rgb: 217, 83, 79;
  --bs-light-rgb: 248, 249, 250;
  --bs-dark-rgb: 52, 58, 64;
  --bs-primary-text-emphasis: #1c345e;
  --bs-secondary-text-emphasis: #45484c;
  --bs-success-text-emphasis: #014a2f;
  --bs-info-text-emphasis: #09414a;
  --bs-warning-text-emphasis: #60451f;
  --bs-danger-text-emphasis: #572120;
  --bs-light-text-emphasis: #495057;
  --bs-dark-text-emphasis: #495057;
  --bs-primary-bg-subtle: #dae6fb;
  --bs-secondary-bg-subtle: #eff0f2;
  --bs-success-bg-subtle: #ccf1e3;
  --bs-info-bg-subtle: #d1ecf1;
  --bs-warning-bg-subtle: #fcefdc;
  --bs-danger-bg-subtle: #f7dddc;
  --bs-light-bg-subtle: #fcfcfd;
  --bs-dark-bg-subtle: #ced4da;
  --bs-primary-border-subtle: #b5cdf7;
  --bs-secondary-border-subtle: #dee1e5;
  --bs-success-border-subtle: #9ae3c8;
  --bs-info-border-subtle: #a2dae3;
  --bs-warning-border-subtle: #f9deb8;
  --bs-danger-border-subtle: #f0bab9;
  --bs-light-border-subtle: #e9ecef;
  --bs-dark-border-subtle: #adb5bd;
  --bs-white-rgb: 255, 255, 255;
  --bs-black-rgb: 0, 0, 0;
  --bs-font-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --bs-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
  --bs-gradient: linear-gradient(180deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
  --bs-body-font-family: var(--bs-font-sans-serif);
  --bs-body-font-size: 1.1rem;
  --bs-body-font-weight: 400;
  --bs-body-line-height: 1.5;
  --bs-body-color: #343a40;
  --bs-body-color-rgb: 52, 58, 64;
  --bs-body-bg: #fff;
  --bs-body-bg-rgb: 255, 255, 255;
  --bs-emphasis-color: #000;
  --bs-emphasis-color-rgb: 0, 0, 0;
  --bs-secondary-color: rgba(52, 58, 64, 0.75);
  --bs-secondary-color-rgb: 52, 58, 64;
  --bs-secondary-bg: #e9ecef;
  --bs-secondary-bg-rgb: 233, 236, 239;
  --bs-tertiary-color: rgba(52, 58, 64, 0.5);
  --bs-tertiary-color-rgb: 52, 58, 64;
  --bs-tertiary-bg: #f8f9fa;
  --bs-tertiary-bg-rgb: 248, 249, 250;
  --bs-heading-color: inherit;
  --bs-link-color: #4582ec;
  --bs-link-color-rgb: 69, 130, 236;
  --bs-link-decoration: underline;
  --bs-link-hover-color: #3768bd;
  --bs-link-hover-color-rgb: 55, 104, 189;
  --bs-code-color: #e83e8c;
  --bs-highlight-color: #343a40;
  --bs-highlight-bg: #fcefdc;
  --bs-border-width: 1px;
  --bs-border-style: solid;
  --bs-border-color: #ddd;
  --bs-border-color-translucent: rgba(0, 0, 0, 0.175);
  --bs-border-radius: 0.375rem;
  --bs-border-radius-sm: 0.25rem;
  --bs-border-radius-lg: 0.5rem;
  --bs-border-radius-xl: 1rem;
  --bs-border-radius-xxl: 2rem;
  --bs-border-radius-2xl: var(--bs-border-radius-xxl);
  --bs-border-radius-pill: 50rem;
  --bs-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
  --bs-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
  --bs-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
  --bs-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
  --bs-focus-ring-width: 0.25rem;
  --bs-focus-ring-opacity: 0.25;
  --bs-focus-ring-color: rgba(69, 130, 236, 0.25);
  --bs-form-valid-color: #02b875;
  --bs-form-valid-border-color: #02b875;
  --bs-form-invalid-color: #d9534f;
  --bs-form-invalid-border-color: #d9534f;
}
/* ... */

